samples/_failures_safe/1761318567_b0d208_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_135674b7.c:2:2: error: expected ‘;’ before ‘typedef’
    2 | c
      |  ^
      |  ;
./samples/SAFE/__tmp_135674b7.c: In function ‘print_shortest_paths’:
./samples/SAFE/__tmp_135674b7.c:169:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  169 |     struct GraphNode *current
      |            ^~~~~~~~~
./samples/SAFE/__tmp_135674b7.c:169:12: error: expected declaration or statement at end of input
